--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -93,14 +93,6 @@ h6 {
   }
 }
 
-@media screen and (max-width: 768px) {
-  // h1,
-  // h1 strong {
-  //   font-size: 32px;
-  //   line-height: 1.0;
-  // }
-}
-
 @media screen and (max-width: 600px) {
   h1, h1 a, h1 strong {
     font-size: 42px;
